--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!doctype html>
+<html>
+  <title>
+    First Website
+  </title>
+  
+  <body>
+    <h1> This is my first github page </h1>
+  </body>
+  
+  <style>
+    body {
+     background-color: blue;
+      color: #fff;
+      text-align: center;
+    }
+  </style>
+  
+</html>
